force-app/main/default/objects/Quote/fields/Census_Reimagine_POC__c.field-meta.xml
<CustomField>
    <fullName>Census_Reimagine_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>E2E Symphony field for POC - lookup from Quote to Census_Reimagine_POC__c</description>
    <label>Census</label>
    <referenceTo>Sym_Census__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>