force-app/main/default/objects/Quote/fields/E2E_Sym_Notify_plan_options_by_e_mail__c.field-meta.xml
<CustomField>
    <fullName>E2E_Sym_Notify_plan_options_by_e_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify plan options by e-mail</label>
    <type>Checkbox</type>
</CustomField>