force-app/main/default/objects/Quote/fields/E2E_Symphony_Fine_Tune_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Fine_Tune_Recommendations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>E2E Symphony field for POC - Lookup to Fine Tune Recommendation Object</description>
    <label>Fine Tune Recommendations</label>
    <referenceTo>Sym_Fine_Tune_Recommendation__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>