force-app/main/default/objects/Quote/fields/E2E_Symphony_Remember_contact_preference__c.field-meta.xml
<CustomField>
    <fullName>E2E_Symphony_Remember_contact_preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remember contact preferences</label>
    <type>Checkbox</type>
</CustomField>