force-app/main/default/objects/Quote/fields/Quote_Finished__c.field-meta.xml
<CustomField>
    <fullName>Quote_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Symphony POC and is flagged when a quote has been completed.</description>
    <label>Quote Finished</label>
    <type>Checkbox</type>
</CustomField>