force-app/main/default/objects/Quote/fields/Quote_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Quote_Initiated__c</fullName>
    <description>Used in the symphony POC</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Initiated</label>
    <type>Date</type>
</CustomField>