force-app/main/default/objects/Quote/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IMAGE( 
CASE(sym_Call_out_Status__c, 
&quot;Success&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Census Error&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_green.gif&quot;), 
&quot;status color&quot;)</formula>
    <label>Quote Health</label>
    <type>Text</type>
</CustomField>