force-app/main/default/objects/Quote/fields/Sym_Actual_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Sym_Actual_Broker_Email__c</fullName>
    <description>This will be used to house the broker&#39;s email address for email alerts.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Broker Email</label>
    <type>Email</type>
</CustomField>