force-app/main/default/objects/Quote/fields/Sym_Actual_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Actual_Broker_Name__c</fullName>
    <formula>Contact.FirstName + &#39; &#39; +  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Broker Name</label>
    <type>Text</type>
</CustomField>