force-app/main/default/objects/Quote/fields/sym_Call_out_Status__c.field-meta.xml
<CustomField>
    <fullName>sym_Call_out_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call out Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>