force-app/main/default/objects/Quote/fields/Sym_Chamber_Of_Commerce__c.field-meta.xml
<CustomField>
    <fullName>Sym_Chamber_Of_Commerce__c</fullName>
    <label>Chamber Of Commerce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>