force-app/main/default/objects/Quote/fields/sym_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>sym_Coinsurance__c</fullName>
    <label>Coinsurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>