force-app/main/default/objects/Quote/fields/Sym_Commission_Value__c.field-meta.xml
<CustomField>
    <fullName>Sym_Commission_Value__c</fullName>
    <label>Commission Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>