force-app/main/default/objects/Quote/fields/sym_Copay__c.field-meta.xml
<CustomField>
    <fullName>sym_Copay__c</fullName>
    <label>Copay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>