force-app/main/default/objects/Quote/fields/Sym_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Sym_Effective_Date__c</fullName>
    <description>This field reflects the Effective Date and is in place for the E2E POC Project knowns as Symphony</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>