force-app/main/default/objects/Quote/fields/Sym_Employer_Main_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Sym_Employer_Main_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Main Contact Email</label>
    <type>Email</type>
</CustomField>