force-app/main/default/objects/Quote/fields/Sym_Employer_Main_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Employer_Main_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Main Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>