force-app/main/default/objects/Quote/fields/sym_HMO__c.field-meta.xml
<CustomField>
    <fullName>sym_HMO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HMO</label>
    <type>Checkbox</type>
</CustomField>