force-app/main/default/objects/Quote/fields/sym_Include_Similar_Plans__c.field-meta.xml
<CustomField>
    <fullName>sym_Include_Similar_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Similar Plans</label>
    <type>Checkbox</type>
</CustomField>