force-app/main/default/objects/Quote/fields/sym_Individual_Deductible__c.field-meta.xml
<CustomField>
    <fullName>sym_Individual_Deductible__c</fullName>
    <label>Individual Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>