force-app/main/default/objects/Quote/fields/sym_Individual_Maximum_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>sym_Individual_Maximum_Out_of_Pocket__c</fullName>
    <label>Individual Maximum Out-of-Pocket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>