force-app/main/default/objects/Quote/fields/sym_Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>sym_Monthly_Premium__c</fullName>
    <label>Monthly Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>