force-app/main/default/objects/Quote/fields/Sym_Notify_data_import_complete_by_text__c.field-meta.xml
<CustomField>
    <fullName>Sym_Notify_data_import_complete_by_text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify data import complete by text</label>
    <type>Checkbox</type>
</CustomField>