force-app/main/default/objects/Quote/fields/sym_PPO__c.field-meta.xml
<CustomField>
    <fullName>sym_PPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPO</label>
    <type>Checkbox</type>
</CustomField>