force-app/main/default/objects/Quote/fields/Sym_Premium_Delay__c.field-meta.xml
<CustomField>
    <fullName>Sym_Premium_Delay__c</fullName>
    <inlineHelpText>(30 days- Standard, 60 days, 90 days)</inlineHelpText>
    <label>Premium Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>