force-app/main/default/objects/Quote/fields/sym_Prioritize_PPO_HMO__c.field-meta.xml
<CustomField>
    <fullName>sym_Prioritize_PPO_HMO__c</fullName>
    <label>Prioritize PPO and HMO Plan Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>